# ball-game-cpp

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  file.txt  index.html  sitemap.xml  xx.sh
client/: CMakeLists(MEMORY)  CMakeLists.txt
client/include/: CNetwork.hpp  CProtocol.hpp  Client.hpp  ConfigClient.hpp  GameConfig.hpp  GameState.hpp
client/include/cell/: CellData.hpp
client/include/components/: Cell.hpp  CellData.hpp  ColorClient.hpp  HUD.hpp  Hotkeys.hpp  Leaderboard.hpp  PlayerClient.hpp  Viewport.hpp  Zoom.hpp
client/include/config/: ConfigClient.hpp
client/include/engine/: GameClient.hpp  NetworkClient.hpp
client/include/entity/: EntityManager.hpp
client/include/game/: GameConfigClient.hpp  GameState.hpp  Hotkeys.hpp
client/include/game_components/: CWorld.hpp  GameState.hpp
client/include/managers/: EntityManager.hpp  PlayerManagerClient.hpp
client/include/network/: CNetwork.hpp  CProtocol.hpp  NetworkClient.hpp  OpCodes.hpp  ProtocolClient.hpp
client/include/protocol/: DataInterfaces.hpp  HandlersClient.hpp  OpCodes.hpp  ProtocolClient.hpp  ReadClient.hpp  SendClient.hpp
client/include/util/: ColorConverterClient.hpp  EntityManager.hpp  Error.hpp  GameConfigClient.hpp  GameState.hpp  GetResponsiveValue.hpp
client/include/utils/: ErrorHandling.hpp
client/src/: CNetwork.cpp  CProtocol.cpp  Client.cpp  GameState.cpp  main.cpp
client/src/cell/: CellManagerClient.cpp
client/src/components/: HUD.cpp  Leaderboard.cpp  PlayerClient.cpp  Viewport.cpp  Zoom.cpp
client/src/engine/: GameClient.cpp  NetworkClient.cpp
client/src/entity/: EntityManager.cpp  GetResponsiveValue.cpp
client/src/game/: GameState.cpp
client/src/game_components/: CWorld.cpp  GameState.cpp
client/src/managers/: EntityManager.cpp  PlayerManagerClient.cpp
client/src/network/: CNetwork.cpp  CProtocol.cpp  NetworkClient.cpp  ProtocolClient.cpp
client/src/protocol/: HandlersClient.cpp  ProtocolClient.cpp  ReadClient.cpp  SendClient.cpp
client/src/util/: EntityManager.cpp  Error.cpp  GameState.cpp  GetResponsiveValue.cpp
client/src/utils/: ErrorHandling.cpp
game_engine/: CMakeLists.txt  README.md
game_engine/include/: Entity.hpp  System.hpp
game_engine/include/components/: Button.hpp  ButtonRect.hpp  Color.hpp  Components.hpp  Link.hpp  OptionButton.hpp  Position.hpp  Shape.hpp  Slider.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Texture.hpp
game_engine/src/: Entity.cpp
gengine/: CMakeLists.txt
gengine/include/: Entity.hpp  System.hpp
gengine/src/: Entity.cpp
server/: CMakeLists(MEMORY)  CMakeLists.txt
server/documentation/: protocol.md
server/include/: Config.hpp  GameConfig.hpp  Network.hpp  OpCodes.hpp  Protocol.hpp  Server.hpp  World.hpp
server/src/: Network.cpp  Protocol.cpp  Server.cpp  TODO  World.cpp  main.cpp
(+260 files in other folders)
